--- a/PixivTerm/PixivTerm.fsproj
+++ b/PixivTerm/PixivTerm.fsproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
     </PropertyGroup>
 
     <ItemGroup>
@@ -12,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="1.0.0-alpha-*" />
+      <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="1.0.0-alpha-28817-02" />
       <PackageReference Include="PixivCSharp" Version="0.5.0" />
     </ItemGroup>
 
